# API-GPI-SSO-Alloxentric

./: .gitignore
alerts-service/: pyproject.toml
alerts-service/app/: config.py  dependencies.py  main.py  schemas.py
alerts-service/app/repositories/: alert_repo.py
alerts-service/app/routers/: alerts.py
auth-service/: pyproject.toml
auth-service/app/: config.py  dependencies.py  exceptions.py  main.py
auth-service/app/repositories/: user_api_repo.py
auth-service/app/routers/: auth.py
auth-service/app/schemas/: auth.py
auth-service/app/services/: auth_service.py
dashboard-service/: .gitignore.bak  Dockerfile  cloudbuild.yaml  pyproject.toml
dashboard-service/app/: config.py  dependencies.py  exceptions.py  main.py
dashboard-service/app/repositories/: dashboard_repo.py
dashboard-service/app/routers/: dashboard.py
dashboard-service/app/schemas/: dashboard.py
dashboard-service/app/services/: dashboard_service.py
digital-twin-service/: .gitignore  Dockerfile  pyproject.toml
digital-twin-service/app/: config.py  dependencies.py  exceptions.py  main.py
digital-twin-service/app/repositories/: digital_twin_repository.py
digital-twin-service/app/routers/: digital_twin.py
digital-twin-service/app/schemas/: digital_twin.py
digital-twin-service/app/services/: digital_twin_service.py
digital-twin-service/tests/integration/: test_digital_twin_router.py
digital-twin-service/tests/unit/: test_digital_twin_service.py
incidents-service/: main.py  pyproject.toml
incidents-service/app/: config.py  dep_incidents.py  dependencies.py  main.py
incidents-service/app/repositories/: conf_incidents.py  incident_repo.py
incidents-service/app/routers/: incidents.py  rt_incidents.py
incidents-service/app/schemas/: incident.py  scm_incidents.py
incidents-service/app/services/: incident_service.py  srv_incidents.py
reports-service/: jsons Prueba.txt  pyproject.toml
reports-service/app/: conf_reports.py  dep_reports.py  exep_reports.py  main.py
reports-service/app/repositories/: rep_reports.py
reports-service/app/routers/: reports_router.py  rt_reports.py
reports-service/app/schemas/: reports_schema.py  scm_reports.py
reports-service/app/services/: cloudinary_service.py  reports_service.py  srv_reports.py
users-service/: pyproject.toml
users-service/app/: config.py  dependencies.py  exceptions.py  main.py
users-service/app/repositories/: user_repo.py
users-service/app/routers/: internal.py  users.py
users-service/app/schemas/: user.py
users-service/app/services/: user_service.py
workers-service/: Dockerfile  cloudbuild.yaml  pyproject.toml
workers-service/app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
workers-service/app/middleware/: logging.py
workers-service/app/repositories/: workers_repository.py
workers-service/app/routers/: workers.py
workers-service/app/schemas/: workers.py
workers-service/app/services/: workers_service.py
workers-service/tests/integration/: test_workers_router.py
workers-service/tests/unit/: test_workers_service.py
