[project]
name = "auth-service"
version = "0.1.0"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyjwt>=2.12.1",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "httpx>=0.27.0",
    "email-validator>=2.3.0",
    "google-cloud-firestore>=2.27.0",
    "python-ulid>=3.1.0",
]
