[project]
name = "digital-twin-service"
version = "1.0.0"
description = "Digital Twin Service - SSO Alloxentric (Plant & Zones)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn>=0.46.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "google-cloud-firestore>=2.27.0",
    "google-cloud-storage>=2.16.0",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-ulid>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
