[project]
name = "reports-service"
version = "0.1.0"
description = "reports Microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-cloud-firestore>=2.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-ulid>=3.1.0",
    "uvicorn>=0.46.0",
]
