[project]
name = "users-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.136.1",
    "google-cloud-firestore>=2.27.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "uvicorn>=0.46.0",
    "python-ulid>=3.1.0",
    "python-dotenv>=1.2.2",
]
